# cmake_vars

./: CMakeLists.txt
include/cmake_vars/: config.hpp.in
